--- a/src/components/Tables/TrainingDetailsTable/TrainingDetailsTable.module.scss
+++ b/src/components/Tables/TrainingDetailsTable/TrainingDetailsTable.module.scss
@@ -1,5 +1,7 @@
 .trainingDetails__list {
-  width: 83vw;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .trainingDetails__list th:nth-last-child(1) {
